# Ichirei-Shikon

./: .gitignore  CMakeLists.txt  README.md
Assets/Levels/: bg_layer_tiledata.csv  fg_layer_tiledata.csv  ichirei.tsx  level1-1.csv  level1-1.tmx  level1.csv  level1.tmx  level2.csv  level2.tmx  test-boss.csv
Assets/Sprites/Collectables/: Coin.json
Assets/Sprites/DemonBoss/: DemonBoss.json
Assets/Sprites/DemonBoss/idle/: idle.json
Assets/Sprites/DemonBoss/invoking/: invoking.json
Assets/Sprites/DemonBoss/jump/: jump.json
Assets/Sprites/FlyingDemon/: FlyingDemon.json
Assets/Sprites/FlyingDemon/Attack/: attack.json
Assets/Sprites/FlyingDemon/Death/: death.json
Assets/Sprites/FlyingDemon/Flying/: flying.json
Assets/Sprites/FlyingDemon/Hurt/: hurt.json
Assets/Sprites/FlyingDemon/Idle/: idle.json
Assets/Sprites/Ghost/: Ghost.json
Assets/Sprites/Goomba/: Goomba_Anims.json
Assets/Sprites/Samurai/: Samurai.json
Assets/Sprites/Samurai/Attack/: ATTACK.json
Assets/Sprites/Samurai/Idle/: IDLE.json  texture.json
Assets/Sprites/Samurai/Run/: RUN.json  offset_creator.py  offsets.cpp  pivot_picker.py  (+2 more)
Assets/Sprites/Slash/: Slash.json
Source/: AudioSystem.cpp  AudioSystem.h  Game.cpp  Game.h  GameMath.h  HUD.cpp  HUD.h  Main.cpp  PerlinNoise.cpp  PerlinNoise.h  SpatialHashing.cpp  SpatialHashing.h
Source/Actors/: Actor.cpp  Actor.h  Block.cpp  Block.h  BlockSpriteSheet.cpp  BlockSpriteSheet.h  Coin.cpp  Coin.h  DemonBoss.cpp  DemonBoss.h  FlyingDemon.cpp  FlyingDemon.h  Ghost.cpp  Ghost.h  Goomba.cpp  Goomba.h  InvisibleBlock.cpp  InvisibleBlock.h  Mario.cpp  Mario.h  Mushroom.cpp  Mushroom.h  Particle.cpp  Particle.h  Player.cpp  Player.h  Points.cpp  Points.h  Slash.cpp  Slash.h  Spawner.cpp  Trigger.cpp  Trigger.h
Source/Components/: RigidBodyComponent.cpp  RigidBodyComponent.h
Source/Components/ColliderComponents/: AABBColliderComponent.cpp  AABBColliderComponent.h  CircleColliderComponent.cpp  CircleColliderComponent.h  PolygonColliderComponent.cpp  PolygonColliderComponent.h
Source/Components/DrawComponents/: DrawAnimatedComponent.cpp  DrawAnimatedComponent.h  DrawComponent.h  DrawSpriteComponent.cpp  DrawSpriteComponent.h
Source/UIElements/: UIButton.cpp  UIButton.h  UIElement.cpp  UIElement.h  UIFont.cpp  UIFont.h  UIHud.cpp  UIHud.h  UIImage.cpp  UIImage.h  UIPauseMenuScreen.cpp  UIPauseMenuScreen.h  UIRect.cpp  UIRect.h  UIScreen.cpp  UIScreen.h  UIText.cpp  UIText.h  UITimerBar.cpp  UITimerBar.h
Tools/: json_generator.py  offset_creator.py  pivot_picker.py  transitions_pivot.py
